BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Time_Off_Territory_vod__c.object
<CustomObject>
    <description>Time Off Territory data</description>
    <fields>
        <fullName>Attendee_BMS_CN__c</fullName>
        <formula>IF( ISNUMBER( Comments_BMS__c)  &amp;&amp;  text(Sub_Type_BMS_CN__c) =  &quot;Medical Training Meeting&quot;,  VALUE(Comments_BMS__c) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendees_Time_BMS_CN__c</fullName>
        <formula>Attendee_BMS_CN__c * Hours_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendees*Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_BMS__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_vod__c</fullName>
        <description>Starting date requested for time off.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hours_off_vod__c</fullName>
        <label>Hours off</label>
        <picklist>
            <controllingField>Time_vod__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_vod__c</fullName>
        <description>Formula to calculate the # of hours based on the Time picklist</description>
        <formula>IF(ISPICKVAL(Time_vod__c, &quot;AM Off&quot;), 4, 
IF(ISPICKVAL(Time_vod__c, &quot;PM Off&quot;), 4, 
IF(ISPICKVAL(Time_vod__c, &quot;All day&quot;), 8,
IF(ISPICKVAL(Time_vod__c, &quot;2 Days&quot;), 16,
IF(ISPICKVAL(Time_vod__c, &quot;3 Days&quot;), 24,
IF(ISPICKVAL(Time_vod__c, &quot;4 Days&quot;), 32,
IF(ISPICKVAL(Time_vod__c, &quot;5 Days&quot;), 40, 
IF(ISPICKVAL(Time_vod__c, &quot;Hourly&quot;), VALUE(TEXT(Hours_off_vod__c)) ,0)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>The Mobile ID field allows for the creation of TOT records from VMobile.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Lookup_BMS_CORE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Off_Territory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_vod__c</fullName>
        <description>Picklist of available reason codes for time off</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Approved Leave (DBM approval required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclement Weather (DBM approval required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Meeting (DBM approval required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - RCO / GDO / Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel / Transfer / Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation / Personal Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick Leave_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Work_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Event_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Episodic Activities_cn_med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Work_cn_med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sickness and illness_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>time in lieu_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Strategy / DAS Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting - Medical / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting / TC - Brand Team (Commercial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Based Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Training_Times_BMS_CN__c</fullName>
        <formula>IF( text(Sub_Type_BMS_CN__c) =&quot;Deliver Commercial Training&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Training Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <label>Start Time</label>
        <picklist>
            <controllingField>Time_vod__c</controllingField>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Picklist of available statuses.  This field is used in the approval process workflow.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Reason_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Field for Medical Users dependent of the Reason Field.</description>
        <label>Sub-Reason</label>
        <picklist>
            <controllingField>Reason_vod__c</controllingField>
            <picklistValues>
                <fullName>Attending commercial training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Tasks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Medical Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivering commercial training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support to access/formulary submissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo or non promo medical review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Projects / Internal Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Force/Other BMS Staff Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Work in Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type_BMS_CN__c</fullName>
        <label>Sub_Type</label>
        <picklist>
            <controllingField>Reason_vod__c</controllingField>
            <picklistValues>
                <fullName>Deliver Commercial Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attend Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation for Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Training Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support to Access/Formulary Submissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support of BMS Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo or Non-Promo Medical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Project Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepare for Scientific Interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Territory of User that creates the Time Off Territory request.  This field is populated via a Trigger on Time Off Territory.</description>
        <label>Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_vod__c</fullName>
        <description>Picklist of available time frames for time off.  (AM, PM, 2 days, etc.) This field drives the # hours calculated in the Hours field.</description>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>AM Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Owner_Lookup_BMS_CORE__r.User_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Source Country</label>
        <type>Text</type>
    </fields>
    <label>Time Off Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_vod__c</columns>
        <columns>Reason_vod__c</columns>
        <columns>Time_vod__c</columns>
        <columns>Start_Time_vod__c</columns>
        <columns>Hours_vod__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TOT-{0000}</displayFormat>
        <label>TOT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off Territory</pluralLabel>
    <recordTypes>
        <fullName>BMS_CANADA_TOT</fullName>
        <active>true</active>
        <description>TOT record type for BMS Canada</description>
        <label>BMS - CANADA - TOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CA_Time_In_Territory</fullName>
        <active>true</active>
        <description>BMS Canada Managers will use this to record Time in Territory</description>
        <label>BMS - CA - Time In Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_MED_TOT</fullName>
        <active>true</active>
        <description>TOT record type for BMS China medical team</description>
        <label>BMS-CHINA-MED-TOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_Sales_TOT</fullName>
        <active>true</active>
        <description>TOT record type for BMS China Sales team</description>
        <label>BMS-CHINA-Sales-TOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_CHINA_Statutory_Holiday</fullName>
        <active>true</active>
        <description>All Statutory Hliday should be imported by Managed service manually each month, same time with Cycle Plan importing. All imported ToT should have a indepentant record type &quot;BMS CN Statutory  Holiday&quot;</description>
        <label>BMS-CHINA-Statutory  Holiday</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_TOT</fullName>
        <active>true</active>
        <description>TOT record type for BMS EMEA</description>
        <label>BMS - EMEA - TOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_TOT_Sales</fullName>
        <active>true</active>
        <description>TOT record type for BMS EMEA REP Sales and Access</description>
        <label>BMS - EMEA - TOT Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_MEA_TOT_Med</fullName>
        <active>true</active>
        <label>BMS - MEA - TOT Med</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_MEA_TOT_Sales</fullName>
        <active>true</active>
        <label>BMS - MEA - TOT Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_US_TOT</fullName>
        <active>true</active>
        <label>BMS-US-TOT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>